tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__MultipleQuestLine__MonsterHunter-AAAAAAAAAAAAAAAAAAAACw==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 11,
  "prerequisites": [
    5
  ],
  "properties": {
    "auto_claim": false,
    "desc": "It's about time to craft something more useful: A sword!\n\nNow that you have a sword, you will get credit for monster kills in the Kill All the Things tab. Watch out, monsters in this world will chew you up and spit you out!\n\nYou can find additional weapon quests on the ...Without Dying tab.",
    "global_share": true,
    "icon": null,
    "is_global": false,
    "is_main": true,
    "is_silent": false,
    "locked_progress": 1,
    "name": "§9§lMonster Hunter",
    "party_single_reward": false,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    5
  ],
  "rewards": [],
  "tasks": []
}
