tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__MultipleQuestLine__MoreCompactStora-AAAAAAAAAAAAAAAAAAAEPQ==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 1085,
  "prerequisites": [
    36
  ],
  "properties": {
    "auto_claim": false,
    "desc": "Now that you are starting to find more and more iron, you feel your copper chests are too small to hold all the stuff.\n\n[note]Do you have copper chests that are too small? You can also upgrade with a fitting upgrade item.[/note]",
    "global_share": true,
    "icon": null,
    "is_global": false,
    "is_main": false,
    "is_silent": false,
    "locked_progress": 0,
    "name": "§2§lMore Compact Storage",
    "party_single_reward": false,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    36
  ],
  "rewards": [],
  "tasks": []
}
