tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__MultipleQuestLine__MoronsGuidetoBre-AAAAAAAAAAAAAAAAAAAIoQ==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 2209,
  "prerequisites": [
    500
  ],
  "properties": {
    "auto_claim": false,
    "desc": "First off, don't be scared by the massive amounts of bees you see here once you unlock the breeding trees. There's even more that aren't included and you'll need NEI to find!\n\nHa ha, just kidding - don't panic! The breeding lines unlock bit by bit showing you what you can go for next, mostly from the top to the bottom. The large icons represent particularly powerful bees. Many of the basic bees have multiple breeding options, only one is shown on the Bee Breeding Tree.\n\nBees have two sets of traits, active and inactive. The active one affects the behavior of the bee while the inactive one is only relevant for breeding.\n\nA trait can be [warn]Dominant[/warn] or §9Recessive§r. When getting newly bred princesses and drones, check both sets in case you got the desired traits. You can breed the ones with inactive traits to try and make them active in later crosses. A Field Kit or GT scanner cannot see passive traits, you need a Beealyzer for that.\n\nWhen breeding bees, a good idea is to settle upon a master template bee - a bee that has little to no crossbreeding potential but has all the traits you want - short life, nocturnal, cave dwelling, rain tolerant, humidity tolerance, temperature tolerance, 4xfertility, and so on. Once you have that bee, breed a bunch of pure princesses with those traits as both active and inactive. These will be your breeding stock.\n\nWhen you are trying to get new species, what you want is a drone - this way you can use your \"breeding stock\" princess with the drone to get new species without the annoying effects or limitations. Poorly crossed princesses can be returned to normal by crossing with breeding stock drones, or just thrown into storage if they now have annoying restrictions. Make sure you keep the trait and species you want, and slowly merge the good traits from your breeding stock. You don't have to do this part in an Apiary, you can use a Bee House to swap around traits. Remember that no species mutations occur in a Bee House. Ignoble bees are good to swap traits because they're mostly disposable - they have a chance to die after 100 breeding cycles, increasing slightly more each generation after that, though genetic stability frames can let them live longer.\n\nOnce you solidify your species, create a pool of drones. You can use those to convert pristine princesses to the new species. Pristine princesses will not die, but they can become Ignoble under certain circumstances like using tons of production frames. Rocky bees are a great source - all their princesses are always pristine, they have decent traits, and there's a bunch of them underground. If you have an ender quarry, you can collect them with that.\n\nOnce you get a new species, it will replace either all Active or Inactive traits. If the mutation happens twice at the same bee, it will replace both sets. For example, when you get a Cultivated bee, either the Active or Inactive column will have all the default Cultivated traits. Mix it a few times and you'll eventually get purebred versions. Just watch out that you don't lose a key trait, like Fast Worker for Cultivated. Most effects are useless, so you can disregard them.\n\nAll quests require purebred species. Purebred means that the inactive species-trait is the same as the active one.\n\nAll traits can be bred into any bee species, aside from the species itself. Species also determines the preferred temperature and humidity, as well as drops. Species require their preferred temperature and humidity to be in the 'jubilant' state and produce their special drops. You can also mimic this with the alveary or industrial apiary, but NOT with tolerances.\n\nAdvanced frames can provide useful boosts to mutation chances or lifespan reduction for faster breeding cycles. However, the excessive multipliers will increase genetic decay, giving a chance for a pristine princess to become ignoble.\n\nIt looks complex, because it is! But it's also a lot of dangerous and useful fun!",
    "global_share": true,
    "icon": null,
    "is_global": false,
    "is_main": false,
    "is_silent": false,
    "locked_progress": 0,
    "name": "Moron's Guide to Breeding Better Bees",
    "party_single_reward": false,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    500
  ],
  "rewards": [],
  "tasks": []
}
