tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__MultipleQuestLine__MoronsManualforM-AAAAAAAAAAAAAAAAAAAHMQ==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 1841,
  "prerequisites": [
    11
  ],
  "properties": {
    "auto_claim": false,
    "desc": "If you haven't noticed, this world is a true hellscape full of Special Mobs and Infernals around every corner. Unlike in vanilla, a player has to actually stay aware and pay attention to what they are fighting. Here are some tips.\n\nIf an infernal has Vengeance, don't shoot it with your 56-damage crossbow!\n\nA high health infernal with regeneration is hard to kill. Even worse if it is a witch that can also heal herself. In those cases, run like hell, or bring a soul vial to capture it and throw it into Mount Doom.\n\nWatch out for zombies with fishing poles - they can pull you to them. And zombies with a bow and arrow - they can shoot you back!",
    "global_share": true,
    "icon": null,
    "is_global": false,
    "is_main": false,
    "is_silent": false,
    "locked_progress": 0,
    "name": "§9§lMoron's Manual for Massacring Monsters",
    "party_single_reward": false,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    11
  ],
  "rewards": [],
  "tasks": []
}
