tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__MultipleQuestLine__MoronsManualtoFe-AAAAAAAAAAAAAAAAAAACzg==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 718,
  "prerequisites": [
    36
  ],
  "properties": {
    "auto_claim": false,
    "desc": "If you ever wanted to know how crop breeding works, you are in the right place! Get some Crops - the sticks, that is - and some seeds from farming with a hoe or mattock. You can also place some plants and berries directly on crop sticks. Good plants to start with are flowers, wheat, cactus and sugarcane.\n\nMake a plot of farmland with your tool and place water in the middle. For now, make 3x1 plots, separated by a row of dirt or cobble. You want to be able to see the center of each column of 3x1 plots all at once, like this:\nFFFdddFFF\ndddFFFddd\nFFFdddFFF\ndddFFFddd\nFFFdWdFFF\ndddFFFddd\nFFFdddFFF\ndddFFFddd\nFFFdddFFF\nNow place crop sticks in each end of the 3x1 plot. Then place the seeds on the sticks and wait a bit.\n\nWhen they are almost fully grown you can put double crop sticks in the center spots by using crop sticks once more on already placed crop sticks. This center area can now grow new crops, even new species.\n\nWith some luck you might get a new unknown seed which can be scanned later.\n\nWeeds need to be removed with a trowel or spade otherwise your field will become overgrown by them.\n\nUsing 3x1 plots is easy and not much work. Check them every 5-10 minutes to remove weeds and gather new seeds. If you forget, you only lose one or two seeds.\n\nIf you find a really nice seed, you can do 3x3 or 5x5 plots with the nice seed in the middle and others next to it for crossing. But this requires more babysitting since weeds could destroy the whole field.\n\nNote that the more crops next to the double crop stick the faster new plants will show up, up to 4 obviously. This is also the way to get new versions of the same plant, you can't do it with just one parent like Agricraft.\n\nDon't leave new crops in these intensive fields. Pull them out and hopefully get a seedbag. Put low stat seeds in production fields that don't require babysitting. Keep the high stat seeds for more crossing.\n\nCrossing happens when two or more almost-mature crops are next to a double cropstick. There is a high chance of getting the same species as the parents. The rest of the time will be a mutation. For more details, check out the IC2 cropnalyzer quest.",
    "global_share": true,
    "icon": null,
    "is_global": false,
    "is_main": false,
    "is_silent": false,
    "locked_progress": 0,
    "name": "Moron's Manual to Fecund Farms",
    "party_single_reward": false,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    36
  ],
  "rewards": [],
  "tasks": []
}
