tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__MultipleQuestLine__MovetheHeat-AAAAAAAAAAAAAAAAAAAAxA==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 196,
  "prerequisites": [
    190
  ],
  "properties": {
    "auto_claim": false,
    "desc": "Heat exchangers are a passive way to pull heat from the reactor or adjacent components and spread it out across a wider area. Their performance is measured in heat units per tick (Hu/t), and there are a few different types that all work slightly differently. [note]Moving heat around is not enough on its own. Heat vents or coolant cells are required to actually dissipate it.[/note]\n\nHeat Exchanger: Pulls 4 Hu/t from the reactor and 12 Hu/t from adjacent components.\n\nAdvanced Heat Exchanger: Pulls 8 Hu/t from the reactor and 24 Hu/t from adjacent components.\n\nReactor Heat Exchanger: Pulls 72 Hu/t from the reactor.\n\nComponent Heat Exchanger: Pulls 36 Hu/t from adjacent components.",
    "global_share": true,
    "icon": null,
    "is_global": false,
    "is_main": false,
    "is_silent": false,
    "locked_progress": 0,
    "name": "§a§lMove the Heat",
    "party_single_reward": false,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    190
  ],
  "rewards": [],
  "tasks": []
}
