tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__MultipleQuestLine__MultiblockRevolu-hEsmeH74S4aOOrROI1AHxQ==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 9149145682493310917,
  "prerequisites": [
    65
  ],
  "properties": {
    "auto_claim": false,
    "desc": "The steam machines you have been using until now have served you well, but there will be a time when you need to process even more items. That's where the so-called multiblocks come in. There's a variety of steam multiblocks available to you - go have a look at the Mass Processing quest tab!\n\nThis tab introduces you to a wide range of extremely powerful multiblock machines that can replace your old, worn-out singleblocks (and some that can replace your old multiblocks!). Many of these new machines will require you to handle additional mechanics and requirements, but it will be worth it!\n\nHere are some terms you should be familiar with as you enter the world of multiblocks:\n\n§lOverclock (OC):§r\nIf a machine can handle at least 4 times the voltage that is required for a recipe, it will overclock - causing it to require 4x the EU/t but also run 2x as fast. This can happen multiple times!\n\n§lPerfect Overclock§r (Often phrased as \"Does not lose efficiency when overclocked):\nSome machines conditionally (or unconditionally) perform perfect overclocks: in this case, the machine will require 4x the EU/t, but it will run 4x as fast instead, leading to both increased speed and no net increase in the total EU usage!\n\n§lParallel§r (Often phrased as \"Processes x items\"):\nMachines which parallel act as if they are running multiple of themselves - that is to say, they are able to perform multiple of the same recipe at the same time, using the recipe's EU/t multiplied by the number of parallels. Machines which parallel will [warn]PRIORITIZE[/warn] this behavior over overclocking, which is good for you! Parallels are more efficient.\n\n§lInput Separation:§r\nRefers to a machine's behavior when choosing inputs for a recipe. With Input Separation on, you must have all required items for a recipe in one bus. With Input Separation off, you can split item inputs of a recipe between multiple busses.\n\n[note]When working with multiblocks, if power is interrupted during operation, your inputs will be lost forever... careful![/note]",
    "global_share": false,
    "icon": null,
    "is_global": null,
    "is_main": false,
    "is_silent": false,
    "locked_progress": 0,
    "name": "§3§lMultiblock Revolution",
    "party_single_reward": null,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    65
  ],
  "rewards": [],
  "tasks": []
}
