tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__MultipleQuestLine__NEINextLevelReci-hmQlN9vLSEOyCnCSOOXz7Q==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 15837831968133084141,
  "prerequisites": [
    3077726032780411493
  ],
  "properties": {
    "auto_claim": false,
    "desc": "NEI recipe search has been improved even further!\n\nAs you might already know, §orecipe§r search works §lONLY§r inside the §orecipe§r search field just like in other search modes. This is the small field that replaces the §orecipe§r page number, when you click on the magnifying glass on the left from that number when viewing recipes. Extended+ does §lNOT§r give you the ability to search §orecipes§r in the big main search field below.\n\nSelect the search mode \"extended+\" to try it out!\n\nHere backticks `` are used around the search queries, but you don't need them when searching.\n\nBy default the search works like in the extended mode, searching in §lany§r of the inputs and outputs of a recipe. So if you search a recipe by `§1-§rdust`, it will return all recipes where there's at least one item that doesn't have §o\"dust\"§r.\n\nLet's say you want to search only in §linputs§r. Put §a<§r before your search query to do that. For example: `§a<§riron` returns all the recipes with §o\"iron\"§r in one of the §linputs§r, `§a<§rsteel§5@gregtech§r` returns the recipes with at least one item from any mod containing §9Gregtech§r in their name, using §o\"steel\"§r.\n\nBut then, if you search by `§a<§1-§rdust` it still returns the recipes with §o\"dust\"§r on the left. Why is that? Because §a<§r searches among §lall§r items. So if there's one item that doesn't have §o\"dust\"§r, then it would still match the recipe, even if the rest of the inputs are dusts.\n\nTo solve this, use §a<&§r instead. Like this: `§a<&§1-§rdust`. It returns §lall§r the recipes without §o\"dust\"§r among the inputs! §a<&§r sets a §lstrict§r condition on §lall§r inputs, unlike §a<§r that sets a condition on §lany§r input.\n\nTo filter the §loutputs§r use §a>§r and §a>&§r. They work the same way, but allow you to filter the §loutputs§r of a recipe. So `§a>§rgold` gives you the recipes with at least one §loutput§r with §o\"gold\"§r. And `§a>&§rgold` gives you the recipes with §o\"gold\"§r in every outputted item.\n\nWant to combine multiple conditions? Sure, just put them one after another in any order. E.g. you could search for `§a<§riron§a>§rsteel`, `§a<&§r §1-§b$dust§r §a<§r cell`, `§a>&§1-§rdust cell`.\n\nOr even for `dust§a>§rcell`. Here the non-prefixed part works like default, searching among §lall§r items from the inputs and outputs. So this query returns the recipes with §o\"dust\"§r in one of the inputs or outputs and §o\"cell\"§r in one of the outputs.\n\nIn some recipes you might have items that don't belong to inputs or outputs. In order to filter them use `§a^§r` and `§a^&§r` respectively.\n\nYou can add spaces for readability too, because (unless you have space mode on) spaces can be used anywhere while in extended+ mode.",
    "global_share": false,
    "icon": null,
    "is_global": null,
    "is_main": true,
    "is_silent": false,
    "locked_progress": 0,
    "name": "§2§lNEI Next Level Recipe Search",
    "party_single_reward": null,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    3077726032780411493
  ],
  "rewards": [],
  "tasks": []
}
